<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="38dp"
        android:gravity="top"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/create_rubric_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="@color/colorAccent"
        android:textColor="#000000"
        android:text="@string/create_rubric" />

    <Button
        android:id="@+id/edit_rubric_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="@color/colorAccent"
        android:text="@string/edit_rubric"
        android:textColor="#000000" />

    <Button
        android:id="@+id/delete_rubric_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="@color/colorAccent"
        android:textColor="#000000"
        android:text="@string/delete_rubric" />

    <Button
        android:id="@+id/grade_test_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="@color/colorAccent"
        android:text="@string/grade_test"
        android:textColor="#000000" />

    <Button
        android:id="@+id/edit_view_grades_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="@color/colorAccent"
        android:text="@string/edit_view_grades"
        android:textColor="#000000" />

</LinearLayout>